# BTC_O2HERO

./: .gitignore  LICENSE  README.md
demo_code/a_key_generation_process/: Cargo.toml
demo_code/a_key_generation_process/src/: main.rs
demo_code/b_address_generation_process/: Cargo.toml
demo_code/b_address_generation_process/src/: main.rs
demo_code/c_legacy_tx_parse/: Cargo.toml
demo_code/c_legacy_tx_parse/src/: main.rs
demo_code/d_segwit_tx_parse/: Cargo.toml
demo_code/d_segwit_tx_parse/src/: main.rs
docs/: a_key_generation_process.md  b_address_generation_process.md  c_legacy_tx_parse.md  d_segwit_tx_parse.md
