[package]
name = "bitcoin_mnemonic_seed"
version = "0.1.0"
edition = "2021"

description = "Generate seed from mnemonic using PBKDF2-HMAC-SHA512"
authors = ["Crypto Quant <yaotux8@gmail.com>"]

[dependencies]
hmac = "0.12"        # For HMAC functionality
sha2 = "0.10"        # For SHA-512 hashing
pbkdf2 = "0.12"      # For PBKDF2 with HMAC-SHA512
hex = "0.4"          # For hexadecimal encoding